--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,119 +9,127 @@
     tools:context=".MainActivity">
 
 
-    <ImageView
-        android:id="@+id/imageView"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:contentDescription="temp"
-        android:scaleType="centerCrop"
+        android:layout_height="250dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/temp" />
+        app:layout_constraintTop_toTopOf="parent">
 
-
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
-
-        <LinearLayout
-            android:layout_width="0dp"
+        <com.denzcoskun.imageslider.ImageSlider
+            android:id="@+id/image_slider"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            app:iss_auto_cycle="true"
+            app:iss_delay="2000"
+            app:iss_period="2000"
+            app:iss_text_align="CENTER" />
+
+    </androidx.cardview.widget.CardView>
 
 
-            <ImageButton
-                android:id="@+id/All"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:clickable="true"
-                android:background="@drawable/round"
-                android:contentDescription="all"
-                android:focusable="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/all"
-                app:shapeAppearanceOverlay="@style/roundedImageView" />
+<!--    <HorizontalScrollView-->
+<!--        android:id="@+id/horizontalScrollView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:layout_marginStart="5dp"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imageView">-->
 
-            <Button
-                android:id="@+id/CSE"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/white"
-                android:drawableLeft="@drawable/cse"
-                android:text=" CSE"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:strokeColor="@color/black"
-                app:strokeWidth="4dp" />
+<!--        <LinearLayout-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="horizontal">-->
 
-            <Button
-                android:id="@+id/Electrical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/white"
-                android:drawableLeft="@drawable/electrical"
-                android:text=" Electrical"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:strokeColor="@color/black"
-                app:strokeWidth="4dp" />
 
-            <Button
-                android:id="@+id/Mechanical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/white"
-                android:drawableLeft="@drawable/mechanical"
-                android:text=" Mechanical"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:strokeColor="@color/black"
-                app:strokeWidth="4dp" />
+<!--            <ImageButton-->
+<!--                android:id="@+id/All"-->
+<!--                android:layout_width="70dp"-->
+<!--                android:layout_height="70dp"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:clickable="true"-->
+<!--                android:background="@drawable/round"-->
+<!--                android:contentDescription="all"-->
+<!--                android:focusable="true"-->
+<!--                android:scaleType="fitCenter"-->
+<!--                android:src="@drawable/all"-->
+<!--                app:shapeAppearanceOverlay="@style/roundedImageView" />-->
 
-            <Button
-                android:id="@+id/Civil"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="8dp"
-                android:backgroundTint="@color/white"
-                android:drawableLeft="@drawable/civil"
-                android:text=" Civil"
-                android:textColor="@color/black"
-                android:textStyle="bold"
-                app:strokeColor="@color/black"
-                app:strokeWidth="4dp" />
+<!--            <Button-->
+<!--                android:id="@+id/CSE"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:drawableLeft="@drawable/cse"-->
+<!--                android:text=" CSE"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textStyle="bold"-->
+<!--                app:strokeColor="@color/black"-->
+<!--                app:strokeWidth="4dp" />-->
 
-        </LinearLayout>
-    </HorizontalScrollView>
+<!--            <Button-->
+<!--                android:id="@+id/Electrical"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:drawableLeft="@drawable/electrical"-->
+<!--                android:text=" Electrical"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textStyle="bold"-->
+<!--                app:strokeColor="@color/black"-->
+<!--                app:strokeWidth="4dp" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/Mechanical"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:drawableLeft="@drawable/mechanical"-->
+<!--                android:text=" Mechanical"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textStyle="bold"-->
+<!--                app:strokeColor="@color/black"-->
+<!--                app:strokeWidth="4dp" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/Civil"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                android:layout_marginStart="8dp"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                android:drawableLeft="@drawable/civil"-->
+<!--                android:text=" Civil"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textStyle="bold"-->
+<!--                app:strokeColor="@color/black"-->
+<!--                app:strokeWidth="4dp" />-->
+
+<!--        </LinearLayout>-->
+<!--    </HorizontalScrollView>-->
 
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
         <GridLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="8dp"
             android:alignmentMode="alignMargins"
@@ -146,7 +154,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="16dp"
@@ -159,7 +167,7 @@
                         android:layout_marginBottom="5dp"
                         android:contentDescription="classromm"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/classroom"/>
+                        android:src="@drawable/classroom" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -189,7 +197,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical"
                     android:padding="16dp"
@@ -201,15 +209,15 @@
                         android:layout_marginEnd="18dp"
                         android:layout_marginBottom="5dp"
                         android:contentDescription="labs"
-                        android:src="@drawable/labs"/>
+                        android:src="@drawable/labs" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
                         android:layout_marginStart="2dp"
                         android:fontFamily="sans-serif-medium"
                         android:paddingTop="8dp"
-                        android:layout_gravity="center_horizontal"
                         android:paddingEnd="8dp"
                         android:text="      Labs     "
                         android:textColor="@color/black"
@@ -245,7 +253,7 @@
                         android:layout_marginEnd="18dp"
                         android:layout_marginBottom="5dp"
                         android:contentDescription="Mess"
-                        android:src="@drawable/mess"/>
+                        android:src="@drawable/mess" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -370,7 +378,7 @@
                         android:layout_marginEnd="18dp"
                         android:layout_marginBottom="5dp"
                         android:contentDescription="cafe"
-                        android:src="@drawable/cafe"/>
+                        android:src="@drawable/cafe" />
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -388,7 +396,7 @@
                 android:id="@+id/hostels"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin = "8dp"
+                android:layout_margin="8dp"
                 android:background="@drawable/rounded_cardview"
                 android:backgroundTint="@color/white"
                 android:clickable="true"
@@ -408,8 +416,8 @@
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:layout_marginBottom="3dp"
                         android:layout_marginEnd="18dp"
+                        android:layout_marginBottom="3dp"
                         android:contentDescription="Hostels"
                         android:src="@drawable/hostel" />
 
@@ -553,12 +561,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_cardview"
                 android:backgroundTint="@color/white"
                 android:clickable="true"
                 android:focusable="true"
                 app:cardCornerRadius="15dp"
-                android:layout_marginBottom="5dp"
                 app:cardElevation="10dp"
                 app:layout_columnWeight="1">
 
@@ -595,12 +603,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_cardview"
                 android:backgroundTint="@color/white"
                 android:clickable="true"
                 android:focusable="true"
                 app:cardCornerRadius="15dp"
-                android:layout_marginBottom="5dp"
                 app:cardElevation="10dp"
                 app:layout_columnWeight="1">
 
